# dsa110-T3

./: .gitignore  README.md  pyproject.toml  setup.py
T3/: #candproc_tools.py#  analysis_tools.py  candproc_tools.py  classify.py  coincidence.py  make_cand_plots.py  plot_grex_cand.py  rfi_offline.py  sigproc.py
dsaT3/: T3_manager.py  T3imaging.py  data_manager.py  filplot_funcs.py  plot_ibeam.py  plot_ibeam_rfi.py  utils.py  voltages_to_ms.py
grex_t3/: T3_manager.py  T3_monitor.py  analysis_tools.py  cand_plotter.py  candproc_tools.py  coincidence.py  data_manager.py  make_cand_plots.py  rfi_offline.py
grex_t3/mlmodel/: RFIMLsettings.py  helpers.py  inference.py
mlmodel/: RFIMLsettings.py  inference.py  unet.py
scripts/: delete_level1_data.py  gcn_kafka_example.py
services/: cand_plotter.service  clear_disks.service  dask_scheduler.service  dask_worker.service  filplot.py  restart_T3_manager.bash  run_clear_disks.py  run_clear_disks.py~  run_onetrigger.py  stop_T3.bash  tasktrigger.py  tasktrigger.service
tests/: test_data_manager.py  test_filplot_funcs.py
