[tool.poetry]
name = "grex-t3"
version = "0.1.0"
description = ""
authors = ["Liam Connor"]
readme = "README.md"
packages = [{include = "grex_t3"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.2"
astropy = "^5.3"
keras = "^2.13.1"
tensorflow = "^2.13.0"
your = "^0.6.7"
jax = "^0.4.14"
jaxlib = "^0.4.14"
paramiko = "^3.4.0"
inotify = "^0.2.10"
slack-sdk = "^3.27.1"
xarray = "^2024.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
